# iplanrio-desafio-data-eng

./: .dockerignore  .gitignore  .user.yml  Dockerfile  README.md  dbt_project.yml  deploy.py  docker-compose.yml  main.ipynb  main.py  package-lock.yml  packages.yml  profiles.yml  pyproject.toml
app/: Dockerfile  crud.py  database.py  main.py
input/: .~lock.terceirizados_201905.csv#
macros/: gcs_auth.sql  generate_schema_name.sql
models/: bronze.sql  gold.sql  schema.yml  silver.sql
src/pipelines/: constants.py  flow.py  tasks.py  utils.py
src/utils/: dados_historicos.py  setup.py
terraform/: main.tf  providers.tf  variables.tf
